--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,10 @@
           <autoVersionSubmodules>true</autoVersionSubmodules>
         </configuration>
       </plugin>
+   <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <version>2.2</version>
+   </plugin>
 
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
